# ocrlang

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: tests.yml
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs
crates/hir/: Cargo.toml
crates/hir/src/: database.rs  lib.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: builtins.rs  env.rs  eval.rs  lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs  token_kind.rs
crates/ocrlang/: Cargo.toml
crates/ocrlang/src/: main.rs
crates/parser/: Cargo.toml
crates/parser/src/: event.rs  grammar.rs  lib.rs  parser.rs  sink.rs  source.rs
crates/parser/src/grammar/: expr.rs  stmt.rs
crates/parser/src/parser/: marker.rs  parse_error.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs
src/: lexer.rs
