[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
pretty_assertions = "1.4.0"
smol_str = "0.2.0"
thiserror = "1.0.50"

[workspace.package]
authors = ["Clay66 <clayw@clay66.dev>"]
license = "MIT"
repository = "https://github.com/Clay-6/ocrlang"

[workspace.metadata.release]
publish = false

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.4.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
