[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
pretty_assertions = "1.4.0"
smol_str = "0.3.2"
thiserror = "2.0.11"
text-size = "1.1.1"
rowan = "0.16.1"

[workspace.package]
authors = ["Clay66 <clayw@clay66.dev>"]
license = "MIT"
repository = "https://github.com/Clay-6/ocrlang"

[workspace.metadata.release]
publish = false
shared-version = true
tag-name = "v{{version}}"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
