[package]
name = "ocrlang_ast"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntax = { path = "../syntax", package = "ocrlang_syntax" }

[dev-dependencies]
parser = { path = "../parser", package = "ocrlang_parser" }
