[package]
name = "ocrlang_ast"
version = "1.0.0"
edition = "2021"
description = "A type-safe interface for OCRLang's AST"
readme.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntax = { version = "1.0.0", path = "../syntax", package = "ocrlang_syntax" }

[dev-dependencies]
parser = { version = "1.0.0", path = "../parser", package = "ocrlang_parser" }
