[package]
name = "hir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { version = "0.1.0", path = "../ast" }
la-arena = "0.3.1"
smol_str = "0.2.0"
syntax = { version = "0.1.0", path = "../syntax" }
