[package]
name = "hir"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { version = "0.1.0", path = "../ast" }
la-arena = "0.3.1"
smol_str.workspace = true
syntax = { version = "0.1.0", path = "../syntax" }

[dev-dependencies]
parser = { path = "../parser" }
pretty_assertions.workspace = true
