[package]
name = "ocrlang_hir"
version = "1.0.0"
edition = "2021"
description = "Crate which defines OCRLang's High Level Intermediate Representation, lowered fom the AST"
readme.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { version = "1.0.0", path = "../ast", package = "ocrlang_ast" }
la-arena = "0.3.1"
smol_str.workspace = true
syntax = { version = "1.0.0", path = "../syntax", package = "ocrlang_syntax" }

[dev-dependencies]
parser = { version = "1.0.0", path = "../parser", package = "ocrlang_parser" }
pretty_assertions.workspace = true
