[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { version = "0.1.0", path = "../ast" }
hir = { version = "0.1.0", path = "../hir" }
parser = { version = "0.1.0", path = "../parser" }
smol_str.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
