[package]
name = "ocrlang_interpreter"
version = "1.1.0"
edition = "2021"
description = "An interpreter for OCRLang's HIR"
readme.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { version = "1.1.0", path = "../ast", package = "ocrlang_ast" }
hir = { version = "1.1.0", path = "../hir", package = "ocrlang_hir" }
parser = { version = "1.1.0", path = "../parser", package = "ocrlang_parser" }
rand = "0.8.5"
smol_str.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
