[package]
name = "ocrlang_lexer"
version = "0.1.0"
edition = "2021"
description = "A lexer for OCRLang's syntax"
readme.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.13.0"
