[package]
name = "ocrlang_lexer"
version = "1.3.0"
edition = "2024"
description = "A lexer for OCRLang's syntax"
readme.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.15.0"
