[package]
name = "ocrlang"
version = "1.0.0"
edition = "2021"
description = "CLI to interpret OCR's Exam Reference Language"
readme.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
color-eyre = "0.6.2"
interpreter = { version = "1.0.0", path = "../interpreter", package = "ocrlang_interpreter" }
rustyline = "12.0.0"
