[package]
name = "ocrlang"
version = "1.2.0"
edition = "2021"
description = "CLI to interpret OCR's Exam Reference Language"
readme.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive", "color"] }
color-eyre = "0.6.2"
line-index = "0.1.0"
interpreter = { version = "1.2.0", path = "../interpreter", package = "ocrlang_interpreter" }
rustyline = "12.0.0"
