[package]
name = "ocrlang_parser"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { version = "0.1.0", path = "../lexer", package = "ocrlang_lexer" }
rowan = "0.15.11"
syntax = { version = "0.1.0", path = "../syntax", package = "ocrlang_syntax" }
thiserror.workspace = true

[dev-dependencies]
expect-test = "1.4.1"
