[package]
name = "ocrlang_parser"
version = "1.3.0"
edition = "2024"
description = "A parser for OCR's Exam Reference Language"
readme.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { version = "1.3.0", path = "../lexer", package = "ocrlang_lexer" }
syntax = { version = "1.3.0", path = "../syntax", package = "ocrlang_syntax" }
thiserror.workspace = true
rowan.workspace = true

[dev-dependencies]
expect-test = "1.4.1"
