[package]
name = "syntax"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "../lexer" }
rowan = "0.15.11"
num-traits = "0.2.16"
num-derive = "0.4.0"
